Change vendor name to unique Packagist namespace

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sudipta/helloworld",
+    "name": "sudiptaghosh/helloworld",
     "description": "A simple Hello World Laravel package",
     "type": "library",
     "license": "MIT",
